--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/cursor.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -120,6 +121,7 @@
 			<script src="assets/js/breakpoints.js"></script>
 			<script src="assets/js/util-.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/click.js"></script>
 
 	</body>
 </html>
