--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-<!DOCTYPE HTML><html><head><link rel="shortcut icon"href="favor.ico"type="image/x-icon"><meta name="robots"content="noindex,nofollow"><title>这是个莫的感情的页面</title><meta charset="utf-8"/><meta name="viewport"content="width=device-width, initial-scale=1, user-scalable=no"/><link rel="stylesheet"href="assets/css/main.css"/><link rel="stylesheet"href="assets/css/cursor.css"/><noscript><link rel="stylesheet"href="assets/css/noscript.css"/></noscript></head><body class="is-preload"><!--Wrapper--><div id="wrapper"><!--Header--><header id="header"><div class="logo"><span class="icon fa-gem"></span></div><div class="content"><div class="inner"><h1>科学上网</h1><h3>梯子状态：<b style="color: limegreen;">开启</b>；剩余流量：<b style="color: limegreen;">22G</b>；到期时间：<b style="color: deepskyblue;">2020.5.14</b>；</h3></div></div><nav><ul><li><a href="#p1">开始吧~</a></li><li><a href="#p2">备用方案</a></li><!--<li><a href="#p3">常见问题</a></li>--><li><a href="#p4">BGM</a></li><!--<li><a href="#elements">Elements</a></li>--></ul></nav></header><!--Main--><div id="main"><!--p1--><article id="p1"><h1 class="major">开始科学上网</h2><h2>须知：</h4><li style="color: red;">互联网非法外之地,你的一切行踪随时会被人探知</li><li style="color: red;">勿谈国是，勿议政事，勿论宗教</li><br/><li>使用的梯子：<a href="https://www.yahaha.co">Yahaha LTD</a>,到期时间是5月14号,剩余22G流量</li><li>这个梯子只限于群内成员使用，请不要把他交给群外的人</li><li>非常时期(如国庆、两会)梯子节点随时可能被ban，如遇到某节点无法使用的情况请更换节点</li><li>梯子自身限制了访问设备最多为2，可能会出现连不进去的情况，这时请移步<a href="#p2">备用方案</a></li><li>梯子节点有时(特别是在非常时期和晚高峰)非常抽风，如遇到请心平气和地换节点</li><br><a href="#start">好，我知道了</a></article><article id="start"><h1 class="major">开始科学上网</h1><li><h2>Step 1</h2></li><a href="https://www.yahaha.co/ssr-download/sstap.zip">点我下载客户端</a><br><br><li><h2>Step 2</h2></li><p>解压，运行SSTap文件夹下的tap-windows-9.21.2.exe以安装OpenVPN虚拟网卡驱动</p><li><h2>Step 3</h2></li><p>打开SSTap.exe,找到这个</p><img src="./assets/img/1.png"/><p>戳他，然后在菜单里找到SSR订阅>SSR订阅管理>添加订阅网址,点开他</p><img src="assets/img/2.png"><p>复制这段网址粘贴到url那一栏后点击右边的“添加”（地址见群）</p><img src="assets/img/3.png"><p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p><img src="assets/img/4.png"><p>如果没有，或者刷出来的代理是空的，那就手动更新他一下。按之前的步骤找到小齿轮，在菜单里找到SSR订阅>SSR订阅管理>手动更新订阅。</p><li><h2>Step 4</h2></li><p>点击代理，选择一个节点</p><img src="assets/img/5.png"><p>然后点击右边的小闪电测试他能不能用</p><img src="assets/img/6.png"><p>如果测试未通过，则代表这个节点暂时不能用了，再选一个吧</p><p>如果tcp测试通过了，udp没过，那就说明你只能用这个节点看网页，不能作为代理加速游戏什么的</p><p>关于节点：</p><p>节点名字前面的两个字母才代表他真正的区域，那个国旗只是辅助判据。CN代表中国,US代表美国,MO代表澳门,HK代表香港</p><li><h2>Step 5</h2></li><p>选择一个模式，如果你只看网页的话推荐选择【仅网页浏览器(跳过中国站点)】。如果你用浏览器看国内网页觉得卡或者出现问题可以断开连接</p><img src="assets/img/7.png"><p>当然这也是给我省点流量~~~</p><p>最后点击连接，就大功告成啦~</p><br><p>如果有什么问题<a href="#p3">看这里</a></p></article><!--p2--><article id="p2"><h2 class="major">备用方案</h2><p>免费梯子，签到领流量。付费套餐价格还不错<a href="https://youyun666.com/">Youyun666</a>平时用用还凑合。具体教程见官网</p></article><!--p3<article id="p3"><h1 class="major">常见问题&解决方案</h2><h2><li>网页加载失败</li></h2><p>先刷新，如果不行就断开连接(断开梯子)在访问</p><h2><li>节点列表是空的</li></h2><p>手动更新订阅即可，如果还是没有，请检查你的网络(当然你能看这个了就不是网络问题)如果还是bug就来找我吧</p></article>--><!--p4--><article id="p4"><h2 class="major">BGM</h2><p>BGM:死机之歌</p><audio id="au"src="https://m10.music.126.net/20200429125734/64a048627c9ab52e3c168f9b68a0b928/ymusic/1bef/5e38/8950/a26aebb47cc2d47747d29fd668a9d0ef.mp3"autoplay="autoplay"controls="controls"preload="auto">当前浏览器不支持audio</audio></article></div><!--Footer--><footer id="footer"><p class="copyright">TG:<a href="https://t.me/MerlynQ"title="需要科学上网哦~">MerlynQ</a></p></footer></div><!--BG--><div id="bg"></div><!--Scripts--><script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><script src="assets/js/browser.js"></script><script src="assets/js/breakpoints.js"></script><script src="assets/js/util-.js"></script><script src="assets/js/main.js"></script><script src="assets/js/click.js"></script></body></html>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<link rel="shortcut icon" href="favor.ico" type="image/x-icon">
+		<meta name="robots" content="noindex,nofollow">
+		<title>这是个莫的感情的页面</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/cursor.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="logo">
+							<span class="icon fa-gem"></span>
+						</div>
+						<div class="content">
+							<div class="inner">
+								<h1>科学上网</h1>
+								<h3>
+									梯子状态：<b style="color: limegreen;">开启</b> ；
+									剩余流量：<b style="color: limegreen;">22G</b>；
+									到期时间：<b style="color: deepskyblue;">2020.5.14</b>；
+								</h3>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#p1">开始吧~</a></li>
+								<li><a href="#p2">备用方案</a></li>
+								<!--<li><a href="#p3">常见问题</a></li>-->
+								<li><a href="#p4">BGM</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- p1 -->
+							<article id="p1">
+								<h1 class="major">开始科学上网</h2>
+								<h2>须知：</h4>
+									<li style="color: red;">互联网非法外之地,你的一切行踪随时会被人探知</li>
+									<li style="color: red;">勿谈国是，勿议政事，勿论宗教</li>
+									<br />
+									<li>使用的梯子：<a href="https://www.yahaha.co">Yahaha LTD</a>,到期时间是5月14号,剩余22G流量</li>
+									<li>这个梯子只限于群内成员使用，请不要把他交给群外的人</li>
+									<li>非常时期(如国庆、两会)梯子节点随时可能被ban，如遇到某节点无法使用的情况请更换节点</li>
+									<li>梯子自身限制了访问设备最多为2，可能会出现连不进去的情况，这时请移步<a href="#p2">备用方案</a></li>
+									<li>梯子节点有时(特别是在非常时期和晚高峰)非常抽风，如遇到请心平气和地换节点</li><br>
+									<a href="#start">好，我知道了</a>
+							</article>
+							<article id="start">
+								<h1 class="major">开始科学上网</h1>
+									<li><h2>Step 1</h2></li>
+										<a href="https://www.yahaha.co/ssr-download/sstap.zip">点我下载客户端</a><br><br>
+									<li><h2>Step 2</h2></li>
+										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动</p>
+									<li><h2>Step 3</h2></li>
+										<p>打开 SSTap.exe,找到这个</p><img src="./assets/img/1.png" />
+									<p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址,点开他</p>
+										<img src="assets/img/2.png" >
+										<p>复制这段网址粘贴到url那一栏后点击右边的“添加”（地址见群）</p>
+										<img src="assets/img/3.png" >
+										<p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p>
+										<img src="assets/img/4.png" >
+										<p>如果没有，或者刷出来的代理是空的，那就手动更新他一下。按之前的步骤找到小齿轮，在菜单里找到 SSR订阅 > SSR订阅管理 > 手动更新订阅。</p>
+									<li><h2>Step 4</h2></li>
+										<p>点击代理，选择一个节点</p>
+										<img src="assets/img/5.png" >
+										<p>然后点击右边的小闪电测试他能不能用</p>
+										<img src="assets/img/6.png" >
+										<p>如果测试未通过，则代表这个节点暂时不能用了，再选一个吧</p>
+										<p>如果tcp测试通过了，udp没过，那就说明你只能用这个节点看网页，不能作为代理加速游戏什么的</p>
+										<p>关于节点：</p>
+										<p>节点名字前面的两个字母才代表他真正的区域，那个国旗只是辅助判据。CN代表中国,US代表美国,MO代表澳门,HK代表香港</p>
+									<li><h2>Step 5</h2></li>
+										<p>选择一个模式，如果你只看网页的话推荐选择【仅网页浏览器(跳过中国站点)】。如果你用浏览器看国内网页觉得卡或者出现问题可以断开连接</p>
+										<img src="assets/img/7.png" >
+										<p>当然这也是给我省点流量~~~</p>
+										<p>最后点击连接，就大功告成啦~</p>
+										<br>
+									
+									<p>如果有什么问题<a href="#p3">看这里</a></p>
+								</article>
+						<!-- p2 -->
+							<article id="p2">
+								<h2 class="major">备用方案</h2>
+									<p>免费梯子，签到领流量。付费套餐价格还不错<a href="https://youyun666.com/">Youyun666</a>平时用用还凑合。具体教程见官网</p>
+									
+								</article>
+
+						<!-- p3 
+							<article id="p3">
+								<h1 class="major">常见问题 & 解决方案</h2>
+								<h2><li>网页加载失败</li></h2>
+								<p>先刷新，如果不行就断开连接(断开梯子)在访问</p>
+								<h2><li>节点列表是空的</li></h2>
+								<p>手动更新订阅即可，如果还是没有，请检查你的网络(当然你能看这个了就不是网络问题)如果还是bug就来找我吧</p>
+								</article>-->
+
+						<!-- p4 -->
+							<article id="p4">
+								<h2 class="major">BGM</h2>
+								<p>BGM:死机之歌</p>
+								<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="https://music.163.com/outchain/player?type=2&id=29775322&auto=1&height=66"></iframe>
+							</article>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">TG:<a href="https://t.me/MerlynQ" title="需要科学上网哦~">MerlynQ</a></p>
+					</footer>
+
+			</div>
+
+		<!-- BG -->
+			<div id="bg"></div>
+
+		<!-- Scripts -->
+			<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+			<script src="assets/js/browser.js"></script>
+			<script src="assets/js/breakpoints.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="assets/js/click.js"></script>
+
+	</body>
+</html>
