--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 										<a href="https://www.yahaha.co/ssr-download/sstap.zip">点我下载客户端</a><br><br>
 									<li><h2>Step 2</h2></li>
 										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动</p>
+										<p>记得先关掉你的杀毒软件再安装哦~</p>
 									<li><h2>Step 3</h2></li>
 										<p>打开 SSTap.exe,找到这个</p><img src="./assets/img/1.png" />
 									<p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址,点开他</p>
