--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 						<div class="content">
 							<div class="inner">
 								<h1>科学上网</h1>
-								<h3>
+								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
 									剩余流量：<b style="color: limegreen;">22G</b>；
 									到期时间：<b style="color: deepskyblue;">2020.5.14</b>；
-								</h3>
+								</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#p1">开始吧~</a></li>
 								<li><a href="#p2">备用方案</a></li>
-								<!--<li><a href="#p3">常见问题</a></li>-->
+								<li><a href="#p3">常见问题</a></li>
 								<li><a href="#p4">BGM</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -62,7 +62,9 @@
 									<li><h2>Step 1</h2></li>
 										<a href="https://www.yahaha.co/ssr-download/sstap.zip">点我下载客户端</a><br><br>
 									<li><h2>Step 2</h2></li>
-										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动</p>
+										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动<br>
+										<img src="assets/img/8.png" ></p>
+										<p>看到这个就算安装完成了<br><img src="assets/img/9.png" ></p>
 									<li><h2>Step 3</h2></li>
 										<p>打开 SSTap.exe,找到这个</p><img src="./assets/img/1.png" />
 									<p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址,点开他</p>
@@ -88,7 +90,8 @@
 										<p>最后点击连接，就大功告成啦~</p>
 										<br>
 									
-									<p>如果有什么问题<a href="#p3">看这里</a></p>
+									<p>如果有什么问题<a href="#p3">点这里</a><br>
+									或者移步<a href="#p2">备用方案</a></p>
 								</article>
 						<!-- p2 -->
 							<article id="p2">
@@ -97,14 +100,21 @@
 									
 								</article>
 
-						<!-- p3 
+						<!-- p3 -->
 							<article id="p3">
 								<h1 class="major">常见问题 & 解决方案</h2>
 								<h2><li>网页加载失败</li></h2>
-								<p>先刷新，如果不行就断开连接(断开梯子)在访问</p>
+								<p>
+								一般刷新一下页面就好，如果还有问题，就断开梯子再刷新<br>
+								502：这是梯子被检测出来了，梯子断开连接然后刷新就好<br>
+								没网：换个节点，如果不行就再换一个</p>
 								<h2><li>节点列表是空的</li></h2>
-								<p>手动更新订阅即可，如果还是没有，请检查你的网络(当然你能看这个了就不是网络问题)如果还是bug就来找我吧</p>
-								</article>-->
+								<p>手动更新订阅即可，如果还是没有，检查你的网络有没有连好(当然你能看这个了就不是网络问题)如果还是bug就来找我吧</p>
+								<h2><li>TCP连接失败</li></h2>
+								<p>换一个节点，直到能用为止。什么？所有节点都没用？...那你来找我吧</p>
+								<p>如果是加载网页连接超时，但是节点能连上，那么换一个节点（这个节点延迟太大，常见于晚高峰）</p>
+								<p>如果还没有解决你的问题就到群里来问我吧~</p>
+								</article>
 
 						<!-- p4 -->
 							<article id="p4">
