--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								502：这是梯子被检测出来了，梯子断开连接然后刷新就好<br>
 								没网：换个节点，如果不行就再换一个</p>
 								<h2><li>节点列表是空的</li></h2>
-								<p>手动更新订阅即可，如果还是没有，检查你的网络有没有连好(当然你能看这个了就不是网络问题)如果还是bug就来找我吧</p>
+								<p>手动更新订阅即可（方法见<a href="#start">这里的</a>Step3），如果还是没有，检查你的网络有没有连好(当然你能看这个了就不是网络问题)如果还是bug就来找我吧</p>
 								<h2><li>TCP连接失败</li></h2>
 								<p>换一个节点，直到能用为止。什么？所有节点都没用？...那你来找我吧</p>
 								<p>如果是加载网页连接超时，但是节点能连上，那么换一个节点（这个节点延迟太大，常见于晚高峰）</p>
