--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 								<h1>科学上网</h1>
 								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
-									剩余流量：<b style="color: limegreen;">22G</b>；
-									到期时间：<b style="color: deepskyblue;">2020.5.14</b>；
+									剩余流量：<b style="color: limegreen;">21.92G</b>；
+									可用天数：<b style="color: deepskyblue;">14</b>天；
 								</p>
 							</div>
 						</div>
