--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="shortcut icon" href="favor.ico" type="image/x-icon">
 		<meta name="robots" content="noindex,nofollow">
-		<title>这是个莫的感情的页面</title>
+		<title>Ah~Oh 页面貌似出了点故障</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,18 +23,18 @@
 							<div class="inner">
 								<h1>科学上网</h1>
 								<p>
-									梯子状态：<b style="color: limegreen;">开启</b> ；
-									剩余流量：<b style="color: limegreen;">21.92G</b>；
-									可用天数：<b style="color: deepskyblue;">14</b>天；
+									梯子状态：<b style="color: darkred;">关闭</b> ；
+									剩余流量：<b style="color: red;">-99999999999999999999999G</b>；
+									可用天数：<b style="color: red;">-99999999999999999</b>天；
 								</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#p1">开始吧~</a></li>
-								<li><a href="#p2">备用方案</a></li>
-								<li><a href="#p3">常见问题</a></li>
-								<li><a href="#p4">BGM</a></li>
+								<li><a href="#p1" onclick="javascript:void(0)">开始吧~</a></li>
+								<li><a href="#p2" onclick="javascript:void(0)">备用方案</a></li>
+								<li><a href="#p3" onclick="javascript:void(0)">常见问题</a></li>
+								<li><a href="#p4" onclick="javascript:void(0)">BGM</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
