--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#p1" onclick="javascript:void(0)">开始吧~</a></li>
-								<li><a href="#p2" onclick="javascript:void(0)">备用方案</a></li>
-								<li><a href="#p3" onclick="javascript:void(0)">常见问题</a></li>
-								<li><a href="#p4" onclick="javascript:void(0)">BGM</a></li>
+								<li><a href="_#p1" onclick="javascript:void(0)">开始吧~</a></li>
+								<li><a href="_#p2" onclick="javascript:void(0)">备用方案</a></li>
+								<li><a href="_#p3" onclick="javascript:void(0)">常见问题</a></li>
+								<li><a href="_#p4" onclick="javascript:void(0)">BGM</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
