--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 							<div class="inner">
 								<h1>绉戝涓婄綉</h1>
 								<p>
-									梯子状态：<b style="color: darkred;">关闭</b> ；
-									剩余流量：<b style="color: red;">-99999999999999999999999G</b>；
-									可用天数：<b style="color: red;">-99999999999999999</b>天；
+									姊瓙鐘舵€?：<b style="color: darkred;">关闭</b> ；
+									鍓╀綑娴侀噺：<b style="color: red;">-99999999999999999999999G</b>；
+									鍙敤澶╂暟：<b style="color: red;">-99999999999999999</b>天；
 								</p>
 							</div>
 						</div>
