--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             c.width = window.innerWidth;
             
             //要掉落的文字
-            var txts = "0123456789";
+            var txts = "0123456789abcdef#";
             //转换为数组
             txts = txts.split("");
             
@@ -120,10 +120,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="_#p1" onclick="javascript:void(0)">开始吧~</a></li>
-								<li><a href="_#p2" onclick="javascript:void(0)">备用方案</a></li>
-								<li><a href="_#p3" onclick="javascript:void(0)">常见问题</a></li>
-								<li><a href="_#p4" onclick="javascript:void(0)">BGM</a></li>
+								<li><a href="#p1" onclick="javascript:void(0)">开始吧~</a></li>
+								<li><a href="#p2" onclick="javascript:void(0)">备用方案</a></li>
+								<li><a href="#p3" onclick="javascript:void(0)">常见问题</a></li>
+								<li><a href="#p4" onclick="javascript:void(0)">BGM</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
