--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 						<div class="content">
 							<div class="inner">
 								<h1>科学上网</h1>
-								<h3>
+								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
-									剩余流量：<b style="color: limegreen;">22G</b>；
-									剩余时间：<b style="color: deepskyblue;">14天</b>；
-								</h3>
+									剩余流量：<b style="color: limegreen;">21.69G</b>；
+									剩余时间：<b style="color: deepskyblue;">13天</b>；
+								</p>
+								<p>你们给点力哦</p>
 							</div>
 						</div>
 						<nav>
@@ -99,9 +100,26 @@
 								</article>
 						<!-- p2 -->
 							<article id="p2">
-								<h2 class="major">备用方案</h2>
-									<p>免费梯子，签到领流量。付费套餐价格还不错<a href="https://youyun666.com/">Youyun666</a>平时用用还凑合。具体教程见官网</p>
-									
+								<h1 class="major">备用方案：<a href="https://youyun666.com/">Youyun666</a></h2>
+									<p>免费梯子，签到领流量。付费套餐价格还不错，平时用用还凑合。</p>
+									<p>这里只提供免费版教程，如果是付费版，请点查看教程视频自行查看</p>
+									<li><h2>Step 1</h2></li>
+										<p>打开主页<a href="https://youyun666.com">youyun666.com</a>，注册账号(网速可能有点慢)</p>
+										<p>打不开？<a href="https://youyun666.net">试试这个</a></p>
+										<p>还打不开？那用科学上网吧...</p>
+									<li><h2>Step 2</h2></li>
+										<p>注册完成进入主页<br />登进去后别忘了点<img src="assets/img/qiandao.PNG" ></p>
+										<p>左侧菜单里找到“下载和教程”</p>
+										<p>点击“windows”，点订阅链接下的复制SSR订阅链接</p>
+									<li><h2>Step 3</h2></li>
+										<img src="./assets/img/1.png" /><p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址</p>
+										<p>不知道这什么玩意？<a href="#start">看这里啦</a></p>
+										<p>把刚刚的地址复制到URL那一栏后点击确定</p>
+										<p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p>
+										<p>等他记载出来后点代理旁边的下拉框，选择一个节点（如果你使用了其他的就使用优云666下的节点）然后连接<br>
+										<i>Tips:节点名字右边那个多少ms的代表延迟，尽量选择延迟低的节点.不过0ms的节点多半是不能用的,不要选哦~</i></p>
+									<h3 style="color: red;">注意：经过我的测试这些节点访问内网速度大多很慢，有的不支持访问内网，在模式那最好选择“仅网页浏览器(跳过中国站点)”</h3>
+									<p style="color: #7ECFF4;">别吐槽这机场速度慢了...免费的，知足吧<br>其实速度还可以，能上谷歌能看推特，不看视频不打游戏的话足够了</p>
 								</article>
 
 								<article id="p3">
@@ -139,7 +157,7 @@
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-			<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+			<script src="assets/js/jQuery.js"></script>
 			<script src="assets/js/browser.js"></script>
 			<script src="assets/js/breakpoints.js"></script>
 			<script src="assets/js/main.js"></script>
