--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<title>这是个莫的感情的页面</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/cursor.css" />
-		<link rel="stylesheet" href="assets/css/sweetalert.css" />
-		<script src="assets/js/sweetalert.min.js"></script>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/css/cursor.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/css/sweetalert.css" />
+		<script src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/js/sweetalert.min.js"></script>
+		<noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -69,31 +69,31 @@
 										<a href="https://www.yahaha.co/ssr-download/sstap.zip">点我下载客户端</a><br><br>
 									<li><h2>Step 2</h2></li>
 										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动<br>
-										<img src="assets/img/8.png" ></p>
-										<p>看到这个就算安装完成了<br><img src="assets/img/9.png" ></p>
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/8.png" ></p>
+										<p>看到这个就算安装完成了<br><img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/9.png" ></p>
 										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动</p>
 										<p>记得先关掉你的杀毒软件再安装哦~</p>
 									<li><h2>Step 3</h2></li>
-										<p>打开 SSTap.exe,找到这个</p><img src="./assets/img/1.png" />
+										<p>打开 SSTap.exe,找到这个</p><img src="./https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/1.png" />
 									<p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址,点开他</p>
-										<img src="assets/img/2.png" >
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/2.png" >
 										<p>复制这段网址粘贴到url那一栏后点击右边的“添加”（地址见群）</p>
-										<img src="assets/img/3.png" >
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/3.png" >
 										<p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p>
-										<img src="assets/img/4.png" >
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/4.png" >
 										<p>如果没有，或者刷出来的代理是空的，那就手动更新他一下。按之前的步骤找到小齿轮，在菜单里找到 SSR订阅 > SSR订阅管理 > 手动更新订阅。</p>
 									<li><h2>Step 4</h2></li>
 										<p>点击代理，选择一个节点</p>
-										<img src="assets/img/5.png" >
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/5.png" >
 										<p>然后点击右边的小闪电测试他能不能用</p>
-										<img src="assets/img/6.png" >
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/6.png" >
 										<p>如果测试未通过，则代表这个节点暂时不能用了，再选一个吧</p>
 										<p>如果tcp测试通过了，udp没过，那就说明你只能用这个节点看网页，不能作为代理加速游戏什么的</p>
 										<p>关于节点：</p>
 										<p>节点名字前面的两个字母才代表他真正的区域，那个国旗只是辅助判据。CN代表中国,US代表美国,MO代表澳门,HK代表香港</p>
 									<li><h2>Step 5</h2></li>
 										<p>选择一个模式，如果你只看网页的话推荐选择【仅网页浏览器(跳过中国站点)】。如果你用浏览器看国内网页觉得卡或者出现问题可以断开连接</p>
-										<img src="assets/img/7.png" >
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/7.png" >
 										<p>当然这也是给我省点流量~~~</p>
 										<p>最后点击连接，就大功告成啦~</p>
 										<br>
@@ -111,11 +111,11 @@
 										<p>打不开？<a href="https://youyun666.net">试试这个</a></p>
 										<p>还打不开？那用科学上网吧...</p>
 									<li><h2>Step 2</h2></li>
-										<p>注册完成进入主页<br />登进去后别忘了点<img src="assets/img/qiandao.PNG" ></p>
+										<p>注册完成进入主页<br />登进去后别忘了点<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/qiandao.PNG" ></p>
 										<p>左侧菜单里找到“下载和教程”</p>
 										<p>点击“windows”，点订阅链接下的复制SSR订阅链接</p>
 									<li><h2>Step 3</h2></li>
-										<img src="./assets/img/1.png" /><p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址</p>
+										<img src="./https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/1.png" /><p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址</p>
 										<p>不知道这什么玩意？<a href="#start">看这里啦</a></p>
 										<p>把刚刚的地址复制到URL那一栏后点击确定</p>
 										<p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p>
@@ -160,11 +160,11 @@
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jQuery.js"></script>
-			<script src="assets/js/browser.js"></script>
-			<script src="assets/js/breakpoints.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/click.js"></script>
+			<script src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/js/jQuery.js"></script>
+			<script src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/js/browser.js"></script>
+			<script src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/js/breakpoints.js"></script>
+			<script src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/js/main.js"></script>
+			<script src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/js/click.js"></script>
 			<script>
 				window.onload = function(){
 					swal("注意：", "由于重置了梯子，之前弄好梯子的各位需要重新按照教程再弄一遍。")
