--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 									剩余时间：<b style="color: deepskyblue;">13天</b>；
 								</p>
 								<p>你们给点力哦</p>
-									剩余流量：<b style="color: limegreen;">21.73G</b>；
-									剩余时间：<b style="color: deepskyblue;">13天</b>；
 								</p>
 							</div>
 						</div>
@@ -74,7 +72,7 @@
 										<p>解压，运行 SSTap 文件夹下的 tap-windows-9.21.2.exe 以安装 OpenVPN 虚拟网卡驱动</p>
 										<p>记得先关掉你的杀毒软件再安装哦~</p>
 									<li><h2>Step 3</h2></li>
-										<p>打开 SSTap.exe,找到这个</p><img src="./https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/1.png" />
+										<p>打开 SSTap.exe,找到这个</p><img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/1.png" />
 									<p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址,点开他</p>
 										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/2.png" >
 										<p>复制这段网址粘贴到url那一栏后点击右边的“添加”（地址见群）</p>
