--- a/index.html
+++ b/index.html
@@ -27,20 +27,17 @@
 								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
 									剩余流量：<b style="color: limegreen;">21.69G</b>；
-									剩余时间：<b style="color: deepskyblue;">13天</b>；
-								</p>
+									剩余时间：<b style="color: deepskyblue;">13天</b>；<br />
 								<p>你们给点力哦</p>
-								</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#p1">开始吧~</a></li>
-								<li><a href="#p2" id="_s_0_">备用方案</a></li>
+								<li><a href="#p2">备用方案</a></li>
 								<li><a href="#p3">常见问题</a></li>
-								<li><a href="#p4" style="color:grey">BGM</a></li>
+								<li><a href="#p4" style="color:grey" title="bgm暂时关闭">BGM</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
-								<script>window.onload=function (){$("_s_0_").onclick=function(){swal("应官方要求，请不要把这个梯子宣传到别处，也不要和别人说起这个梯子，谢谢")}}</script>
 							</ul>
 						</nav>
 					</header>
@@ -103,7 +100,7 @@
 						<!-- p2 -->
 							<article id="p2">
 								<h1 class="major">备用方案：<a href="https://youyun666.com/">Youyun666</a></h2>
-									<p>免费梯子，签到领流量。付费套餐价格还不错，平时用用还凑合。</p>
+									<p>免费梯子，签到领流量。付费套餐价格还不错，平时用用还凑合。应官方要求，请不要把这个梯子宣传到别处，也不要和别人说起这个梯子，谢谢</p>
 									<p>这里只提供免费版教程，如果是付费版，请点查看教程视频自行查看</p>
 									<li><h2>Step 1</h2></li>
 										<p>打开主页<a href="https://youyun666.com">youyun666.com</a>，注册账号(网速可能有点慢)</p>
@@ -142,7 +139,7 @@
 						<!-- p4 -->
 							<article id="p4">
 								<h2 class="major">BGM</h2>
-								<p>BGM: - </p>
+								<p>BGM暂时关闭</p>
 							</article>
 
 					</div>
