--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<li style="color: red;">互联网非法外之地,你的一切行踪随时会被人探知</li>
 									<li style="color: red;">勿谈国是，勿议政事，勿论宗教</li>
 									<br />
-									<li>使用的梯子：<a href="https://www.yahaha.co">Yahaha LTD</a>,到期时间是5月14号,剩余22G流量</li>
+									<li>使用的梯子：<a href="https://www.yahaha.co">Yahaha LTD</a></li>
 									<li>这个梯子只限于群内成员使用，请不要把他交给群外的人</li>
 									<li>非常时期(如国庆、两会)梯子节点随时可能被ban，如遇到某节点无法使用的情况请更换节点</li>
 									<li>梯子自身限制了访问设备最多为2，可能会出现连不进去的情况，这时请移步<a href="#p2">备用方案</a></li>
@@ -100,8 +100,9 @@
 						<!-- p2 -->
 							<article id="p2">
 								<h1 class="major">备用方案：<a href="https://youyun666.com/">Youyun666</a></h2>
-									<p>免费梯子，签到领流量。付费套餐价格还不错，平时用用还凑合。应官方要求，请不要把这个梯子宣传到别处，也不要和别人说起这个梯子，谢谢</p>
-									<p>这里只提供免费版教程，如果是付费版，请点查看教程视频自行查看</p>
+									<p>免费梯子，签到领流量。付费套餐价格还不错，平时用用还凑合。<br>
+									<h3 style="color:red">应官方要求，请不要把这个梯子宣传到别处，也不要和别人说起这个梯子，谢谢</h3><br>
+									这里只提供免费版教程，如果是付费版，请点查看教程视频自行查看</p>
 									<li><h2>Step 1</h2></li>
 										<p>打开主页<a href="https://youyun666.com">youyun666.com</a>，注册账号(网速可能有点慢)</p>
 										<p>打不开？<a href="https://youyun666.net">试试这个</a></p>
@@ -117,7 +118,7 @@
 										<p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p>
 										<p>等他记载出来后点代理旁边的下拉框，选择一个节点（如果你使用了其他的就使用优云666下的节点）然后连接<br>
 										<i>Tips:节点名字右边那个多少ms的代表延迟，尽量选择延迟低的节点.不过0ms的节点多半是不能用的,不要选哦~</i></p>
-									<h3 style="color: red;">注意：经过我的测试这些节点访问内网速度大多很慢，有的不支持访问内网，在模式那最好选择“仅网页浏览器(跳过中国站点)”</h3>
+									<h3 style="color: red;">注意：经过我的测试这些节点访问内网速度大多很慢，有的不支持访问内网，模式最好选择“仅网页浏览器(跳过中国站点)”</h3>
 									<p style="color: #7ECFF4;">速度还可以，能上谷歌能看推特，不看视频不打游戏的话足够了</p>
 								</article>
 
@@ -144,10 +145,10 @@
 
 					</div>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<p class="copyright">TG:<a href="https://t.me/MerlynQ" title="需要科学上网哦~">MerlynQ</a></p>
-					</footer>
+					</footer>-->
 
 			</div>
 
