--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 								<h1>科学上网</h1>
 								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
-									剩余流量：<b style="color: limegreen;">21.69G</b>；
-									剩余时间：<b style="color: deepskyblue;">13天</b>；<br />
-								<p>你们给点力哦</p>
+									剩余流量：<b style="color: limegreen;">29.95G</b>；
+									剩余时间：<b style="color: deepskyblue;">12天</b>；<br />你们给点力哦</p>
 							</div>
 						</div>
 						<nav>
