--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
 									剩余流量：<b style="color: limegreen;">29.95G</b>；
-									剩余时间：<b style="color: deepskyblue;">12天</b>；<br />你们给点力哦</p>
+									剩余时间：<b style="color: deepskyblue;">12天</b>；<br />流量重置了，随便用吧~</p>
 							</div>
 						</div>
 						<nav>
