--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="shortcut icon" href="favor.ico" type="image/x-icon">
 		<meta name="robots" content="noindex,nofollow">
-		<title>这是个莫的感情的页面</title>
+		<title>这是哪？？？</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/css/main.css" />
@@ -26,7 +26,7 @@
 								<h1>科学上网</h1>
 								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
-									剩余流量：<b style="color: limegreen;">29.95G</b>；
+									剩余流量：<b style="color: limegreen;">28G</b>；
 									剩余时间：<b style="color: deepskyblue;">12天</b>；<br />流量重置了，随便用吧~</p>
 							</div>
 						</div>
