--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 								<h1>科学上网</h1>
 								<p>
 									梯子状态：<b style="color: limegreen;">开启</b> ；
-									剩余流量：<b style="color: limegreen;">28G</b>；
-									剩余时间：<b style="color: deepskyblue;">12天</b>；<br />流量重置了，随便用吧~</p>
+									剩余流量：<b style="color: yellow;">9G</b>；
+									剩余时间：<b style="color: blue;">9天</b>；<br />流量重置了，随便用吧~</p>
 							</div>
 						</div>
 						<nav>
