--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 										<p>左侧菜单里找到“下载和教程”</p>
 										<p>点击“windows”，点订阅链接下的复制SSR订阅链接</p>
 									<li><h2>Step 3</h2></li>
-										<img src="./https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/1.png" /><p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址</p>
+										<img src="https://cdn.jsdelivr.net/gh/zozzs/zozzs.github.io/assets/img/1.png" /><p>戳他，然后在菜单里找到SSR订阅 > SSR订阅管理 > 添加订阅网址</p>
 										<p>不知道这什么玩意？<a href="#start">看这里啦</a></p>
 										<p>把刚刚的地址复制到URL那一栏后点击确定</p>
 										<p>关闭SSTap订阅管理，如果一切正常应该会加载订阅</p>
